# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt  setup.cfg
 page_analyzer/: __init__.py  app.py
.github/workflows/: main.yml
page_analyzer/: __init__.py  app.py  page_repository.py
page_analyzer/templates/pages/: all_pages.html  get_pages.html  index.html  layout.html  show_page.html  site_page.html
path/to/venv./: pyvenv.cfg
