[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nic11371 <nic11371@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.0"
flask = "^3.1.0"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
validators = "^0.34.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
lxml = "^5.3.0"
html5lib = "^1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
